--- a/Assignment 23.ipynb
+++ b/Assignment 23.ipynb
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.loc['column_2', 1]= \"vishvesh\""
+    "df1.loc['column_2', 1]= \"Anurag\""
    ]
   },
   {
